--- a/css/main.css
+++ b/css/main.css
@@ -7,6 +7,7 @@ body {
 
 }
 
+
 /* top_banner */
 .top_banner {
     font-size: 13px;
@@ -129,6 +130,7 @@ body {
 
 
 
+
 /* popup */
 .popup {
     position: absolute;
@@ -150,10 +152,58 @@ body {
 
 
 
+
+/* right_banner */
+.right_banner {
+    position: fixed;
+    right: 0;
+    top: 50%;
+    transform: translate(100%, 0);
+    transition: 0.5s;
+    z-index: 9999;
+    transition: 0.5s;
+
+}
+
+.right_banner ul {
+    padding: 20px;
+    background: #fff;
+    line-height: 40px;
+}
+
+.right_banner.on {
+    transform: translate(0, 0);
+}
+
+.right_banner.on i {
+    transform: rotate(180deg);
+}
+
+.right_banner button {
+    position: absolute;
+    top: 0;
+    left: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    transform: translate(-100%, 0);
+    background: rgb(54, 54, 150);
+    border: 1px solid#333;
+    color: #fff;
+    padding: 15px;
+    text-align: center;
+    border-radius: 50% 0 0 50%;
+}
+
+
+
+
+
+
 /* mainVisual */
 .mainVisual {
     position: relative;
-    height: 800px;
+    height: 700px;
     background: url(../img/section_1_bg.jpg) no-repeat center center/cover;
 }
 
@@ -203,9 +253,225 @@ body {
 
 
 
+
+
+
+/* mainLink */
+
+
+
+#mainLink .main_link {
+    position: relative;
+    gap: 30px;
+    align-items: flex-end;
+    height: 230px;
+    margin-top: 10px;
+
+}
+
+#mainLink .main_link>li {
+    position: relative;
+
+    height: 200px;
+    transition: height 0.5s;
+
+
+    justify-content: center;
+    align-items: center;
+}
+
+#mainLink .main_link>li>a {
+    border-radius: 50%;
+}
+
+#mainLink .main_link>li>a>strong {
+    position: absolute;
+    margin: 20px 0;
+}
+
+#mainLink .main_link>li>a:nth-child(1) {
+    background: rgb(199, 198, 198, 0.5);
+}
+
+/* #mainLink .main_link>li>a:nth-child(2) {
+    background: #28308a;
+}
+
+#mainLink .main_link>li>a:nth-child(3) {
+    background: #28308a;
+}
+
+#mainLink .main_link>li>a:nth-child(4) {
+    background: #28308a;
+}
+
+#mainLink .main_link>li>a:nth-child(5) {
+    background: #28308a;
+}
+
+#mainLink .main_link>li>a:nth-child(6) {
+    background: #28308a;
+}
+
+#mainLink .main_link>li>a:nth-child(7) {
+    background: #28308a;
+}
+
+#mainLink .main_link>li>a:nth-child(8) {
+    background: #28308a;
+} */
+
+
+
+
+#mainLink .main_link .customer {
+    flex: 2;
+
+    flex-direction: column;
+    align-items: flex-end;
+    text-align: right;
+
+    padding: 0 30px 0 0;
+}
+
+#mainLink .main_link .customer a {
+    font-size: 40px;
+    font-weight: 800;
+    margin: 0 0 10px 0;
+
+    text-shadow: 1px 0 3px rgb(255 255 255 / 25%);
+    background: linear-gradient(to right top, #0a96ba, #032777, #333333);
+    color: transparent;
+    -webkit-background-clip: text;
+}
+
+#mainLink .main_link .customer i {
+    position: absolute;
+    top: -25px;
+    right: 30px;
+    padding: 10px;
+    font-size: 30px;
+    background: #da544b;
+    color: #fff;
+    border-radius: 50%;
+}
+
+#mainLink .main_link>li>a:hover {
+    background: #28308a;
+
+}
+
+#mainLink .main_link>li a {
+    display: block;
+    text-align: center;
+    color: #fff;
+}
+
+#mainLink .main_link>li span {
+    display: block;
+    width: 100px;
+    height: 100px;
+    font-size: 0;
+    margin: 20px 0 15px 0;
+    background-image: url(../img/m_link_ic.png);
+}
+
+#mainLink .main_link>li strong {
+    margin: 0 0 0 25px;
+    font-size: 15px;
+    font-weight: 400;
+}
+
+#mainLink .main_link>li>:nth-child(1) span {
+    background-position: 21px 25px;
+
+}
+
+#mainLink .main_link>li>:nth-child(1) span:hover {
+    background-position: 21px 115px;
+}
+
+#mainLink .main_link>li:nth-child(2) span {
+    background-position: -80px 25px;
+}
+
+#mainLink .main_link>li:nth-child(2) span:hover {
+    background-position: -80px 115px;
+}
+
+#mainLink .main_link>li:nth-child(3) span {
+    background-position: -180px 25px;
+}
+
+#mainLink .main_link>li:nth-child(3) span:hover {
+    background-position: -180px 114px;
+}
+
+#mainLink .main_link>li:nth-child(4) span {
+    background-position: -275px 25px;
+}
+
+#mainLink .main_link>li:nth-child(4) span:hover {
+    background-position: -275px 114px;
+}
+
+#mainLink .main_link>li:nth-child(5) span {
+    background-position: -370px 25px;
+}
+
+#mainLink .main_link>li:nth-child(5) span:hover {
+    background-position: -370px 114px;
+}
+
+#mainLink .main_link>li:nth-child(6) span {
+    background-position: -472px 25px;
+}
+
+#mainLink .main_link>li:nth-child(6) span:hover {
+    background-position: -472px 114px;
+}
+
+
+#mainLink .main_link>li:nth-child(7) span {
+    background-position: -575px 25px;
+}
+
+#mainLink .main_link>li:nth-child(7) span:hover {
+    background-position: -575px 114px;
+}
+
+#mainLink .main_link>li:nth-child(8) span {
+    background-position: -680px 25px;
+}
+
+#mainLink .main_link>li:nth-child(8) span:hover {
+    background-position: -680px 114px;
+}
+
+#mainLink .main_link>li:nth-child(9) span {
+    background-position: -880px 25px;
+}
+
+#mainLink .main_link>li:nth-child(9) span:hover {
+    background-position: -880px 114px;
+}
+
+#mainLink .main_link>li:nth-child(10) span {
+    background-position: -1100px 25px;
+}
+
+#mainLink .main_link>li:nth-child(10) span:hover {
+    background-position: -1100px 114px;
+}
+
+
+
+
+
+
+
+
 /* main_Art */
-
-
 .main_Art {
     padding: 0 0 100px 0;
     overflow: hidden;
@@ -227,6 +493,7 @@ body {
 
 
 .main_Art .inner {
+    top: -20px;
     width: 1200px;
     height: 350px;
     border-radius: 0 50% 0 0;
@@ -462,6 +729,103 @@ body {
 
 
 
+/* 서브페이지 부분 */
+
+
+/* subTitle */
+#subTitle {
+    line-height: 30px;
+    font-size: 13px;
+    text-align: right;
+    background: #f7f7f7;
+    border-bottom: 1px solid #ddd;
+}
+
+
+
+#subContent .article {
+    flex: 9;
+    padding: 40px 40px 40px 0;
+    border-right: 1px solid #ddd;
+}
+
+#subContent .aside {
+    flex: 3;
+    padding: 40px 0 100px 40px;
+}
+
+#subContent .article h2 {
+    line-height: 40px;
+    border-bottom: 1px solid #ddd;
+    margin: 0 0 40px 0;
+}
+
+#subContent .article h2 strong {
+    font-size: 21px;
+}
+
+#subContent .article h2 span {
+    font-size: 15px;
+    color: #ccc;
+}
+
+#subContent .lnb {
+    margin: 0 0 50px 0;
+}
+
+#subContent .lnb ul li a {
+    display: block;
+    line-height: 40px;
+    font-size: 15px;
+    border-bottom: 1px solid #ddd;
+
+}
+
+#subContent .lnb ul li a::before {
+    content: "\e93e";
+    font-family: xeicon;
+    font-size: 2px;
+    padding: 0 15px;
+}
+
+#subContent .lnb li.on a {
+    background: linear-gradient(to left bottom, #0a96ba, #032777, #333333);
+    color: #fff;
+    border-bottom: 1px solid transparent;
+    border-radius: 5px;
+}
+
+#subContent .slogan {
+    margin: 0 0 30px 0;
+}
+
+#subContent .sub_customer li {
+    border-bottom: 1px solid #032777;
+    text-align: right;
+    line-height: 30px;
+}
+
+#subContent .sub_customer li:first-child {
+    font-size: 19px;
+    font-weight: 500;
+}
+
+#subContent .sub_customer li:last-child {
+    border-bottom: 1px solid transparent;
+}
+
+#subContent .content .sub {
+    text-align: center;
+    font-size: 18px;
+    font-weight: 300;
+    line-height: 30px;
+    word-break: keep-all;
+}
+
+#subContent .content .sub img {
+    margin: 30px 0;
+}
+
 
 
 /* footer */
@@ -471,6 +835,21 @@ body {
     text-align: center;
     border-top: 1px solid #ddd;
     background: #a09f9f;
+}
+
+#footer .foot_top .foot_img {
+    position: relative;
+    background: url(../img/footer_logo.png);
+    width: 22.5%;
+    height: 40px;
+    top: 50px;
+    left: -200px;
+    font-size: 0;
+}
+
+#footer .foot_top .fm {
+    margin: 0 0 50px 0;
+
 }
 
 #footer .f_inner {
@@ -486,11 +865,78 @@ body {
 
 #footer .f_inner>li~li::before {
     content: "";
-    position: absolute;
+
     top: 50%;
     left: -15px;
     width: 1px;
     height: 11px;
     background: #333;
     transform: translate(0, -50%);
+}
+
+#footer .foot_top {
+    border-bottom: 1px solid#555;
+    display: flex;
+    justify-content: space-between;
+    width: 1200px;
+    margin: 20px auto;
+}
+
+
+#footer .foot_top .left {
+    font-size: 0;
+}
+
+#footer .foot_top .left li {
+    display: inline-block;
+    font-size: 15px;
+
+}
+
+#footer .foot_top .left li~li::before {
+    content: "";
+    margin: 0 20px;
+    display: inline-block;
+    width: 1px;
+    height: 11px;
+    background: #333;
+}
+
+#footer .foot_top .right {
+    display: flex;
+    gap: 2px;
+    color: #fff;
+    padding: 0 0 -20px 50px;
+}
+
+
+
+#footer .right i {
+    font-size: 20px;
+    padding: 10px;
+    background: #333;
+    border-radius: 50%;
+}
+
+
+
+
+
+
+
+/* toTop */
+#toTop {
+    position: fixed;
+    bottom: 30px;
+    right: 30px;
+
+    display: none;
+}
+
+#toTop i {
+    background: #fff;
+    color: #333;
+    font-size: 20px;
+    padding: 20px;
+    border-radius: 50%;
 }
