--- a/css/main.css
+++ b/css/main.css
@@ -39,7 +39,7 @@ body {
     position: sticky;
     top: 0;
     left: 0;
-    z-index: 999;
+    z-index: 999999999;
     display: flex;
     padding: 0 50px;
     justify-content: space-between;
